assets/css/main.css
/* ==========================================================================
    Base styles
   ========================================================================== */


*, *:before, *:after {
    box-sizing: inherit;
}

* {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    transition: all .3s ease; 
}

html {
    scroll-behavior: smooth;
    box-sizing: border-box;
}

body {
    margin:0; 
    padding:0; 
}

/* ==========================================================================
    Typography
   ========================================================================== */


section {
    padding: 5em 0 5em 0!important;
    background-color: #fafafa
}

.smart-scroll{
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1030;
}

/* .scrolled-down{
     transform:translateY(-100%); transition: all 0.3s ease-in-out;
}

.scrolled-up{
     transform:translateY(0); transition: all 0.3s ease-in-out;
} */

.block {
    height: 40vh;
}

.img-wrapper {
    display: grid;
    height: 50vh;
}

img.transition {
    opacity: 1;
}
  
.img-wrapper img {
    grid-column: 1;
    grid-row: 1;
    transition: opacity 0.3s;
}

.nav-link {
    color: #000;
    letter-spacing: 0.1em;
    -webkit-transition: .3s all ease-out;
    -moz-transition: .3s all ease-out;
    transition: .3s all ease-out;
}

a.navbar-brand{
    color: blue;
}

.nav-link.active, 
.nav-link:hover {
    color: blue;
    transition: all 0.3s;
    font-weight: 400!important;
}

/* ==========================================================================
    Map
    ========================================================================== */

    #map {
        top:0vh;
        height: 100vh;
        width: 100vw;
        position: fixed;
        z-index: -5;
    }

    #header {
        width: 100vw;
        padding: 2vh;
        text-align: center;
    }
    #footer {
        width: 100%;
        min-height: 5vh;
        padding-top: 2vh;
        padding-bottom: 2vh;
        text-align: center;
        line-height: 25px;
        font-size: 13px;
    }
    #features {
        padding-top: 10vh;
        padding-bottom: 10vh;
        z-index: 100;
    }

    .centered {
        width: 50vw;
        margin: 0 auto;
    }
    .lefty {
        width: 33vw;
        margin-left: 5vw;
    }
    .righty {
        width: 33vw;
        margin-left: 62vw;
    }
    .light {
        color: #000;
        background-color: #fafafa;
    }
    .dark {
        color: #fafafa;
        background-color: #000;
    }
    .step {
        padding-bottom: 50vh;
        /* margin-bottom: 10vh; */
        opacity: 0.25;
    }
    .step.active {
        opacity: 0.9;
    }

    .step div {
        padding:  25px 50px;
        line-height: 25px;
        font-size: 13px;
    }

    .step img {
        width: 100%;
    }

    @media (max-width: 750px) {
        #features {
            width: 90vw;
            margin: 0 auto;
        }
    }

    /* Fix issue on mobile browser where scroll breaks  */
    .mapboxgl-canvas-container.mapboxgl-touch-zoom-rotate.mapboxgl-touch-drag-pan, 
    .mapboxgl-canvas-container.mapboxgl-touch-zoom-rotate.mapboxgl-touch-drag-pan .mapboxgl-canvas {
        touch-action: unset;
    }


/* ==========================================================================
    Scrolly-telly
    ========================================================================== */


/* Smartphones (portrait and landscape) ----------- */
@media only screen
and (min-device-width : 100px)
and (max-device-width : 515px) {
}

/* iPads (portrait and landscape) ----------- */
@media only screen
and (min-device-width : 768px)
and (max-device-width : 1024px) {
}

/* iPads (landscape) ----------- */
@media only screen
and (min-device-width : 768px)
and (max-device-width : 1024px)
and (orientation : landscape) {

}

/* iPads (portrait) ----------- */
@media only screen
and (min-device-width : 1024px)
and (orientation : portrait) {
}

/* Desktops and laptops ----------- */
@media only screen
and (min-width : 1224px) {

}

/* Large screens ----------- */
@media only screen
and (min-width : 1824px) {
    .container{
        max-width: 1570px;
    }
}

